add text-shadow text about

--- a/css/styles.css
+++ b/css/styles.css
@@ -1556,6 +1556,7 @@ hr.fancy::before {
     font-size   : var(--text-md);
     line-height : var(--vspace-1_25);
     color       : var(--color-text-dark);
+    text-shadow: -2px 2px 5px black;
 }
 
 .pull-quote {
